testing the joke endpoints